--- a/future.ipynb
+++ b/future.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "loletc.ipynb",
+      "name": "Future.ipynb",
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
@@ -24,7 +24,7 @@
         "id": "8uQ12Gz6ZzCb"
       },
       "source": [
-        "# **Lol-etc**\n",
+        "# **Future Etc**\n",
         "\n",
         "\n",
         "\n"
@@ -61,7 +61,7 @@
         "id": "8S3CXRBTZa6C"
       },
       "source": [
-        "!git clone https://github.com/Cuanterus02/lolkw.git\n",
+        "!git clone https://github.com/profit02/lolkw.git\n",
         "%cd lolkw\n",
         "!chmod +x *.sh\n",
         "!./launcher.sh"
